# OpenNOW-Android

./: .gitignore  AGENTS.md  AGENTS.md~  LICENSE  README.md  opencode.json  settings.gradle.kts
.github/workflows/: android-build.yml
.plan/: 00-CONTEXT.md  01-THEME.md  02-DEPENDENCIES.md  02-STATE.md  03-NAVIGATION.md  04-SCREENS.md  05-STREAM.md  06-CLEANUP.md  06-POLISH.md  07-CLEANUP.md  ORCHESTRATION.md  SUMMARY.md
.plan.bak/: 00-CONTEXT.md  01-THEME.md  02-STATE.md  03-NAVIGATION.md  04-SCREENS.md  05-STREAM.md  07-CLEANUP.md  ORCHESTRATION.md  SUMMARY.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opennow_native.cpp
app/src/main/java/com/opencloudgaming/opennow/: AndroidQueueAds.kt  AndroidQueueStatusNotifier.kt  DisplayRefreshRate.kt  GfnApi.kt  MainActivity.kt  Models.kt  OpenNowScreens.kt  OpenNowViewModel.kt  Persistence.kt  QrCode.kt  QueueLaunchStatus.kt  Streaming.kt
app/src/main/java/com/opennow/app/: App.kt  MainActivity.kt  Theme.kt
app/src/main/res/drawable/: ic_arrow_up.xml  ic_clear.xml  ic_mic.xml  ic_save.xml  ic_save_filled.xml  ic_search.xml  ic_store_amazon.xml  ic_store_battlenet.xml  ic_store_ea.xml  ic_store_epic.xml  ic_store_gog.xml  ic_store_google_play.xml  ic_store_hoyo.xml  ic_store_microsoft.xml  ic_store_riot.xml  ic_store_rockstar.xml  ic_store_steam.xml  ic_store_ubisoft.xml  ic_store_xbox.xml  ic_tab_library.xml  ic_tab_settings.xml  ic_tab_store.xml  ic_tab_stream.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
(+36 files in other folders)
